# Charly_agent

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/api/: __init__.py  app.py  dependencies.py  main.py
apps/api/routes/: chat.py  health.py
apps/web/: package.json  tsconfig.json
docs/memory/: README.md  mermaind.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatLayout.tsx  Composer.tsx  MessageBubble.tsx
scripts/: remediate_lt_memory.py  run_monitor.sh
src/agent/: app.py
src/agent/api/: __init__.py  chat.py  dependencies.py  health.py  schemas.py  sse.py
src/agent/application/: __init__.py  runtime.py  tool_runtime.py
src/agent/bootstrap/: __init__.py  runtime_factory.py  settings.py
src/agent/cli/: main.py
src/agent/config/: __init__.py  settings.py
src/agent/core/: planner.py  runtime.py  tool_runtime.py  tracing.py  tracing_db.py
src/agent/db/: conn.py  healthcheck.py
src/agent/domain/: __init__.py  planner.py
src/agent/infrastructure/: __init__.py
src/agent/memory/: cleanup.py  context.py  distill_lt.py  distill_mt.py  memory_manager.py  models.py  retrieve.py  retrieve_smart.py  scoring.py  store.py  store_lt.py  (+1 more)
tests/: test_lt_distill_pipeline.py  test_runtime_memory_background.py
tests/backend/: test_chat_stream.py  test_sse_format.py
(+61 files in other folders)
